@@ -106,7 +106,7 @@ GCRYPT_1.6 {
     gcry_mpi_ec_set_mpi; gcry_mpi_ec_set_point;
     gcry_mpi_ec_get_affine;
     gcry_mpi_ec_dup; gcry_mpi_ec_add; gcry_mpi_ec_sub; gcry_mpi_ec_mul;
-    gcry_mpi_ec_curve_point;
+    gcry_mpi_ec_curve_point; gcry_mpi_ec_decode_point;
 
     gcry_log_debug;
     gcry_log_debughex; gcry_log_debugmpi; gcry_log_debugpnt; gcry_log_debugsxp;
